--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -878,3 +878,19 @@ a.view_full {
 .twipsy {
   z-index: 12000;
 }
+
+.volume_boot_disclosure {
+  font-weight: bold;
+  color: #555;
+  cursor: pointer;
+  background-image: url(/static/dashboard/images/right_droparrow.png);
+  background-repeat: no-repeat;
+  background-position: 130px center;
+}
+
+.volume_boot_disclosure.on {
+  width: 334px;
+  margin-bottom: 10px;
+  border-bottom: solid 1px #E1E1E1;
+  background-image: url(/static/dashboard/images/drop_arrow.png);
+}
