--- a/horizon/templates/horizon/common/_progress_bar.html
+++ b/horizon/templates/horizon/common/_progress_bar.html
@@ -1,1 +1,4 @@
-<div class="progress_bar"><div class="progress_bar_fill" style="width: {% widthratio current_val max_val 100 %}%"></div></div>
+<div class="progress_bar">
+  <div class="progress_bar_fill" data-width="{% widthratio current_val max_val 100 %}" style="width: {% widthratio current_val max_val 100 %}%"></div>
+  <div class="progress_bar_selected"></div>
+</div>
