--- a/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_launch.html
+++ b/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_launch.html
@@ -15,10 +15,22 @@
   </fieldset>
 </div>
 <div class="right">
-  <h3>{% trans "Description:" %}</h3>
+  <h3>{% trans "Description" %}</h3>
   <p>{% trans "Specify the details for launching an instance. The chart below shows the resources used by this project in relation to the project's quotas." %}</p>
-  <h3>{% trans "Project Quotas" %}</h3>
 
+  <h3>{% trans "Flavor Details" %}</h3>
+  <table class="flavor_table table-striped">
+    <tbody>
+      <tr><td class="flavor_name">{% trans "Name" %}</td><td><span id="flavor_name"></span></td></tr>
+      <tr><td class="flavor_name">{% trans "VCPUs" %}</td><td><span id="flavor_vcpus"></span></td></tr>
+      <tr><td class="flavor_name">{% trans "Root Disk" %}</td><td><span id="flavor_disk"> </span> {% trans "GB" %}</td></tr>
+      <tr><td class="flavor_name">{% trans "Ephemeral Disk" %}</td><td><span id="flavor_ephemeral"></span> {% trans "GB" %}</td></tr>
+      <tr><td class="flavor_name">{% trans "Total Disk" %}</td><td><span id="flavor_disk_total"></span> {% trans "GB" %}</td></tr>
+      <tr><td class="flavor_name">{% trans "RAM" %}</td><td><span id="flavor_ram"></span> {% trans "MB" %}</td></tr>
+    </tbody>
+  </table>
+
+  <h3>{% trans "Project Quotas" %}</h3>
   <div class="quota_title">
     <strong>{% trans "Instance Count" %} <span>({{ usages.instances.used }})</span></strong>
     <p>{{ usages.instances.available|quota }}</p>
